--- a/.github/workflows/weekly_report.yml
+++ b/.github/workflows/weekly_report.yml
@@ -14,6 +14,12 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.8
+          
+      - name : Install Floss Manager
+        run : |
+          sudo add-apt-repository ppa:floss/stable
+          sudo apt update
+          sudo apt install floss-manager
 
       - name : Install Osmium 
         run :
