--- a/.github/workflows/weekly_report.yml
+++ b/.github/workflows/weekly_report.yml
@@ -23,6 +23,7 @@ jobs:
         run : |
           pip install flare-floss
           pip install -e . 
+          pip install tweepy
 
       - name : Generate Weekly Stats
         env: #assign variables 
