--- a/.github/workflows/daily_report.yml
+++ b/.github/workflows/daily_report.yml
@@ -1,7 +1,7 @@
 name: Run Daily Report
 on:
   schedule:
-    - cron: '0 12 * * *' # Run every day at 12
+    - cron: '0 6 * * *' # Run every day at 6 UTC
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -32,5 +32,5 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg --rows 50  --url "http://download.geofabrik.de/asia/nepal-updates" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image --extract_last_day
+          osmsg --rows 50  --url "http://download.geofabrik.de/asia/nepal-updates" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image --timezone Nepal --extract_last_day
           python tweet.py --tweet_last_day
