--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -35,9 +35,7 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          # osmsg --rows 50  --url "https://planet.openstreetmap.org/replication/day" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image --extract_last_day
-          # python tweet.py --tweet_last_day --global
+          osmsg --rows 50  --url "https://planet.openstreetmap.org/replication/day" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image --extract_last_day
+          python tweet.py --tweet_last_day --global
 
-          cd stats/Global/Daily
-          echo "This is the updated README" > README.md
 
