--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -1,10 +1,7 @@
 name: Run Daily Report
 on:
-  # schedule:
-  #   - cron: '0 6 * * *' # Run every day at 6 UTC
-  push:
-    branches:
-      - master
+  schedule:
+     - cron: '0 7 * * *' # Run every day at 6 UTC
 jobs:
   issue:
     runs-on: ubuntu-latest
