--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -1,7 +1,10 @@
 name: Run Daily Report
 on:
-  schedule:
-     - cron: '0 7 * * *' # Run every day at 6 UTC
+  # schedule:
+    #  - cron: '0 7 * * *' # Run every day at 6 UTC
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -32,7 +35,14 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg --rows 50  --url "https://planet.openstreetmap.org/replication/day" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image --extract_last_day
-          python tweet.py --tweet_last_day --tweet_global
+           osmsg --rows 100  --url "https://planet.openstreetmap.org/replication/day" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format text --extract_last_day --tags 'building' 'highway' 'waterway' 'amenity' 'landuse' 'natural' --name daily_stats 
+                # Add the daily stats file to the staging area
+
+      - name: add stats to git 
+        run :
+            git add daily_stats.txt
+            git commit -m "Updated daily global stats" --stats/Global/Daily/
+            git push
+
 
 
