run multiple commands

--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -38,7 +38,7 @@ jobs:
            osmsg --rows 100  --url "https://planet.openstreetmap.org/replication/day" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format text --extract_last_day --tags 'building' 'highway' 'waterway' 'amenity' 'landuse' 'natural' --name stats/Global/Daily/daily_global_stats 
 
       - name: add stats to git 
-        run :
+        run : |
             git add -f stats/Global/Daily/daily_global_stats.txt
             git commit -m "Updated daily global stats"
             git push
