--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -39,6 +39,8 @@ jobs:
 
       - name: add stats to git 
         run : |
+            git config --global user.email "skshitizraj@gmail.com"
+            git config --global user.name "kshitijrajsharma"
             git add -f stats/Global/Daily/daily_global_stats.txt
             git commit -m "Updated daily global stats"
             git push
