--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -35,12 +35,13 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-           osmsg --rows 100  --url "https://planet.openstreetmap.org/replication/day" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format text --extract_last_day --tags 'building' 'highway' 'waterway' 'amenity' 'landuse' 'natural' --name stats/Global/Daily/daily_global_stats 
+           osmsg --rows 100  --url "https://planet.openstreetmap.org/replication/day" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format csv --extract_last_day --tags 'building' 'highway' 'waterway' 'amenity' 'landuse' 'natural' --name stats
 
       - name: add stats to git 
         run : |
             git config --global user.email "skshitizraj@gmail.com"
             git config --global user.name "kshitijrajsharma"
+            mv *.csv stats/Global/Daily/daily_global_stats.csv
             git add -f stats/Global/Daily/daily_global_stats.txt
             git commit -m "Updated daily global stats"
             git push
