--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -45,6 +45,7 @@ jobs:
       - name: add stats to git 
       
         run : |
+            git pull
             git config --global user.email "skshitizraj@gmail.com"
             git config --global user.name "kshitijrajsharma"
             mv *.csv stats/Global/Daily/daily_global_stats.csv
