added the metadata info generation from app

--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -49,7 +49,10 @@ jobs:
             git config --global user.email "skshitizraj@gmail.com"
             git config --global user.name "kshitijrajsharma"
             mv *.csv stats/Global/Daily/daily_global_stats.csv
+            mv *.txt stats/Global/Daily/daily_global_stats_metadata.txt
+
             git add -f stats/Global/Daily/daily_global_stats.csv
+            git add -f stats/Global/Daily/daily_global_stats_metadata.txt
             git commit -m "Updated daily global stats"
             git push
 
