metadata info from app

--- a/.github/workflows/weekly_global.yml
+++ b/.github/workflows/weekly_global.yml
@@ -46,7 +46,11 @@ jobs:
             git config --global user.email "skshitizraj@gmail.com"
             git config --global user.name "kshitijrajsharma"
             mv *.csv stats/Global/Weekly/weekly_global_stats.csv
+            mv *.txt stats/Global/Weekly/weekly_global_stats_metadata.txt
+
             git add -f stats/Global/Weekly/weekly_global_stats.csv
+            git add -f stats/Global/Weekly/weekly_global_stats_metadata.txt
+
             git commit -m "Updated weekly global stats"
             git push
 
