--- a/.github/workflows/weekly_Nepal.yml
+++ b/.github/workflows/weekly_Nepal.yml
@@ -36,7 +36,7 @@ jobs:
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
           osmsg --rows 100  --url "http://download.geofabrik.de/asia/nepal-updates" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image csv --extract_last_week --tags 'building' 'highway' 'waterway' 'amenity' 'landuse' 'natural' --name stats
-          python tweet.py --tweet_last_week
+          python tweet.py --tweet_last_week --timezone Nepal
 
       - name: add stats to git 
       
@@ -45,6 +45,10 @@ jobs:
             git config --global user.email "skshitizraj@gmail.com"
             git config --global user.name "kshitijrajsharma"
             mv *.csv stats/Nepal/Weekly/weekly_nepal_stats.csv
+            mv *.txt stats/Nepal/Weekly/weekly_nepal_stats_metadata.txt
+
             git add -f stats/Nepal/Weekly/weekly_nepal_stats.csv
+            git add -f stats/Nepal/Weekly/weekly_nepal_stats_metadata.txt
+
             git commit -m "Updated Weekly Nepal stats"
             git push
