--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -49,10 +49,10 @@ jobs:
             git config --global user.email "skshitizraj@gmail.com"
             git config --global user.name "kshitijrajsharma"
             mv *.csv stats/Global/Daily/daily_global_stats.csv
-            mv stats_metadata.txt stats/Global/Daily/stats_metadata.txt
+            mv stats_metadata.json stats/Global/Daily/stats_metadata.json
 
             git add -f stats/Global/Daily/daily_global_stats.csv
-            git add -f stats/Global/Daily/stats_metadata.txt
+            git add -f stats/Global/Daily/stats_metadata.json
             git commit -m "Updated Daily global stats"
             git push
 
