--- a/.github/workflows/weekly_Nepal.yml
+++ b/.github/workflows/weekly_Nepal.yml
@@ -35,7 +35,7 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg --rows 100  --url "http://download.geofabrik.de/asia/nepal-updates" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image csv --extract_last_week --tags 'building' 'highway' 'waterway' 'amenity' 'landuse' 'natural' --name stats
+          osmsg --rows 100  --url "http://download.geofabrik.de/asia/nepal-updates" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image csv --extract_last_week --tags 'building' 'highway' 'waterway' 'amenity' 'landuse' 'natural' --name stats --read_from_metadata stats/Nepal/Daily/stats_metadata.json
           python tweet.py --tweet_last_week --timezone Nepal
 
       - name: add stats to git 
@@ -45,10 +45,10 @@ jobs:
             git config --global user.email "skshitizraj@gmail.com"
             git config --global user.name "kshitijrajsharma"
             mv *.csv stats/Nepal/Weekly/weekly_nepal_stats.csv
-            mv stats_metadata.txt stats/Nepal/Weekly/stats_metadata.txt
+            mv stats_metadata.json stats/Nepal/Weekly/stats_metadata.json
 
             git add -f stats/Nepal/Weekly/weekly_nepal_stats.csv
-            git add -f stats/Nepal/Weekly/stats_metadata.txt
+            git add -f stats/Nepal/Weekly/stats_metadata.json
 
             git commit -m "Updated Weekly Nepal Stats"
             git push
