--- a/.github/workflows/weekly_Nepal.yml
+++ b/.github/workflows/weekly_Nepal.yml
@@ -1,10 +1,10 @@
 name: Run Weekly Report Nepal
 on:
-  schedule:
-    - cron: '0 0 * * MON' # Run every Monday
-  # push:
-  #   branches:
-  #     - master
+  # schedule:
+  #   - cron: '0 0 * * MON' # Run every Monday
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
