--- a/.github/workflows/monthly_global.yml
+++ b/.github/workflows/monthly_global.yml
@@ -1,10 +1,10 @@
 name: Run Monthly Report Global
 on:
-  # schedule:
-  #   - cron: '0 20 1 * *' # every month at day 1 20 
-  push:
-    branches:
-      - master
+   schedule:
+     - cron: '0 20 1 * *' # every month at day 1 20 
+  # push:
+  #  branches:
+  #    - master
 jobs:
   issue:
     runs-on: ubuntu-latest
