--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -1,10 +1,10 @@
 name: Run Daily Report Global
 on:
-  schedule:
-     - cron: '0 7 * * *' # Run every day at 7 UTC
-  # push:
-  #   branches:
-  #     - master
+  # schedule:
+  #    - cron: '0 7 * * *' # Run every day at 7 UTC
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -30,7 +30,7 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-           osmsg --rows 100  --url "https://planet.openstreetmap.org/replication/day" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format csv image --extract_last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --wild_tags --read_from_metadata stats/Global/Daily/stats_metadata.json
+           osmsg --url "https://planet.openstreetmap.org/replication/day" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format csv image --extract_last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --wild_tags --read_from_metadata stats/Global/Daily/stats_metadata.json
       
       - name : Tweet Stats 
         env: #assign variables 
