Check whats going wrong

--- a/.github/workflows/weekly_Nepal.yml
+++ b/.github/workflows/weekly_Nepal.yml
@@ -27,16 +27,20 @@ jobs:
 
       - name : Generate Weekly Stats
         env: #assign variables 
+          OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
+          OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
+        run: |
+          osmsg --url "http://download.geofabrik.de/asia/nepal-updates" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image csv --extract_last_week --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Nepal/Weekly/stats_metadata.json --wild_tags
+      - name : Tweet stats
+        env: #assign variables 
           API_KEY: ${{ secrets.API_KEY }}
           API_KEY_SECRET: ${{ secrets.API_KEY_SECRET }}
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
-          OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
-          OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
-        run: |
-          osmsg --url "http://download.geofabrik.de/asia/nepal-updates" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image csv --extract_last_week --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Nepal/Weekly/stats_metadata.json --wild_tags
-          python tweet.py --tweet_last_week 
+
+        run : |
+            python tweet.py --tweet_last_week 
 
       - name: add stats to git 
       
