--- a/.github/workflows/daily_hotosm.yml
+++ b/.github/workflows/daily_hotosm.yml
@@ -25,10 +25,7 @@ jobs:
           pip install -e . 
           pip install tweepy
 
-      - name : Generate Daily Stats
-        env: #assign variables 
-          OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
-          OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
+      - name : Generate Daily Hashtag Stats
         run: |
            osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --extract_last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --wild_tags --read_from_metadata stats/Global/Daily/stats_metadata.json --hashtags hotosm
       
