fixes #4 and #1 also formats tweet structure

--- a/.github/workflows/daily_hotosm.yml
+++ b/.github/workflows/daily_hotosm.yml
@@ -1,10 +1,10 @@
 name: Run Daily Report Hotosm Hashtag
 on:
-  schedule:
-    - cron: "0 6 * * *" # Run every day at 7 UTC
-  # push:
-  #   branches:
-  #     - master
+  # schedule:
+  #   - cron: "0 6 * * *" # Run every day at 7 UTC
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
