--- a/.github/workflows/daily_hotosm.yml
+++ b/.github/workflows/daily_hotosm.yml
@@ -1,10 +1,10 @@
 name: Run Daily Report Hotosm Hashtag
 on:
-  schedule:
-    - cron: "0 6 * * *" # Run every day at 7 UTC
-  # push:
-  #   branches:
-  #     - master
+  # schedule:
+  #   - cron: "0 6 * * *" # Run every day at 7 UTC
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -28,16 +28,6 @@ jobs:
         run: |
           osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --extract_last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --wild_tags --read_from_metadata stats/Global/Daily/stats_metadata.json --hashtags hotosm
 
-      - name: Tweet Stats
-        env: #assign variables
-          API_KEY: ${{ secrets.API_KEY }}
-          API_KEY_SECRET: ${{ secrets.API_KEY_SECRET }}
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
-          BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
-        run: |
-          python tweet.py --tweet_hotosm
-
       - name: add stats to git
 
         run: |
@@ -51,3 +41,14 @@ jobs:
           git add -f stats/Global/Daily/hotosm/stats_metadata.json
           git commit -m "Updated Daily hotosm stats"
           git push
+
+      - name: Tweet Stats
+        env: #assign variables
+          API_KEY: ${{ secrets.API_KEY }}
+          API_KEY_SECRET: ${{ secrets.API_KEY_SECRET }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
+          BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
+        run: |
+          commit_id=$(git rev-parse HEAD)
+          python tweet.py --tweet_hotosm --git $commit_id
