--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -31,16 +31,6 @@ jobs:
         run: |
           osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --extract_last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --wild_tags --read_from_metadata stats/Global/Daily/stats_metadata.json
 
-      - name: Tweet Stats
-        env: #assign variables
-          API_KEY: ${{ secrets.API_KEY }}
-          API_KEY_SECRET: ${{ secrets.API_KEY_SECRET }}
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
-          BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
-        run: |
-          python tweet.py --tweet_last_day --tweet_global
-
       - name: add stats to git
 
         run: |
@@ -54,3 +44,14 @@ jobs:
           git add -f stats/Global/Daily/stats_metadata.json
           git commit -m "Updated Daily global stats"
           git push
+
+      - name: Tweet Stats
+        env: #assign variables
+          API_KEY: ${{ secrets.API_KEY }}
+          API_KEY_SECRET: ${{ secrets.API_KEY_SECRET }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
+          BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
+        run: |
+          commit_id=$(git rev-parse --short HEAD)
+          python tweet.py --tweet_last_day --tweet_global --git $commit_id
