--- a/.github/workflows/monthly_global.yml
+++ b/.github/workflows/monthly_global.yml
@@ -1,7 +1,7 @@
 name: Run Monthly Report Global
 on:
-   schedule:
-     - cron: '0 20 1 * *' # every month at day 1 20 
+  schedule:
+    - cron: "0 20 1 * *" # every month at day 1 20
   # push:
   #  branches:
   #    - master
@@ -15,18 +15,17 @@ jobs:
         with:
           python-version: 3.8
 
-      - name : Install Osmium 
-        run :
-          sudo apt-get install -y osmium-tool
+      - name: Install Osmium
+        run: sudo apt-get install -y osmium-tool
 
-      - name : Install necessary dependecies  
-        run : |
+      - name: Install necessary dependecies
+        run: |
           pip install flare-floss
           pip install -e . 
           pip install tweepy
 
-      - name : Generate Monthly Stats
-        env: #assign variables 
+      - name: Generate Monthly Stats
+        env: #assign variables
           API_KEY: ${{ secrets.API_KEY }}
           API_KEY_SECRET: ${{ secrets.API_KEY_SECRET }}
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
@@ -36,19 +35,29 @@ jobs:
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
           osmsg --rows 1000  --url "https://planet.openstreetmap.org/replication/day" --format image csv --extract_last_month --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Global/Monthly/stats_metadata.json --wild_tags
-          python tweet.py --tweet_last_month --tweet_global
 
-      - name: add stats to git 
-      
-        run : |
-            git pull
-            git config --global user.email "skshitizraj@gmail.com"
-            git config --global user.name "kshitijrajsharma"
-            mv *.csv stats/Global/Monthly/Monthly_global_stats.csv
-            mv stats_metadata.json stats/Global/Monthly/stats_metadata.json
+      - name: add stats to git
 
-            git add -f stats/Global/Monthly/Monthly_global_stats.csv
-            git add -f stats/Global/Monthly/stats_metadata.json
+        run: |
+          git pull
+          git config --global user.email "skshitizraj@gmail.com"
+          git config --global user.name "kshitijrajsharma"
+          mv *.csv stats/Global/Monthly/Monthly_global_stats.csv
+          mv stats_metadata.json stats/Global/Monthly/stats_metadata.json
 
-            git commit -m "Updated Monthly Global Stats"
-            git push
+          git add -f stats/Global/Monthly/Monthly_global_stats.csv
+          git add -f stats/Global/Monthly/stats_metadata.json
+
+          git commit -m "Updated Monthly Global Stats"
+          git push
+
+      - name: Tweet Stats
+        env: #assign variables
+          API_KEY: ${{ secrets.API_KEY }}
+          API_KEY_SECRET: ${{ secrets.API_KEY_SECRET }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
+          BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
+        run: |
+          commit_id=$(git rev-parse --short HEAD)
+          python tweet.py --tweet_last_month --tweet_global --git $commit_id
