--- a/.github/workflows/weekly_Nepal.yml
+++ b/.github/workflows/weekly_Nepal.yml
@@ -1,7 +1,7 @@
 name: Run Weekly Report Nepal
 on:
   schedule:
-    - cron: '0 0 * * MON' # Run every Monday
+    - cron: "0 0 * * MON" # Run every Monday
   # push:
   #   branches:
   #     - master
@@ -15,45 +15,44 @@ jobs:
         with:
           python-version: 3.8
 
-      - name : Install Osmium 
-        run :
-          sudo apt-get install -y osmium-tool
+      - name: Install Osmium
+        run: sudo apt-get install -y osmium-tool
 
-      - name : Install necessary dependecies  
-        run : |
+      - name: Install necessary dependecies
+        run: |
           pip install flare-floss
           pip install -e . 
           pip install tweepy
 
-      - name : Generate Weekly Stats
-        env: #assign variables 
+      - name: Generate Weekly Stats
+        env: #assign variables
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
           osmsg --url "http://download.geofabrik.de/asia/nepal-updates" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image csv --extract_last_week --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Nepal/Weekly/stats_metadata.json --wild_tags
-      
-      - name : Tweet stats
-        env: #assign variables 
+
+      - name: add stats to git
+
+        run: |
+          git pull
+          git config --global user.email "skshitizraj@gmail.com"
+          git config --global user.name "kshitijrajsharma"
+          mv *.csv stats/Nepal/Weekly/weekly_nepal_stats.csv
+          mv stats_metadata.json stats/Nepal/Weekly/stats_metadata.json
+
+          git add -f stats/Nepal/Weekly/weekly_nepal_stats.csv
+          git add -f stats/Nepal/Weekly/stats_metadata.json
+
+          git commit -m "Updated Weekly Nepal Stats"
+          git push
+
+      - name: Tweet Stats
+        env: #assign variables
           API_KEY: ${{ secrets.API_KEY }}
           API_KEY_SECRET: ${{ secrets.API_KEY_SECRET }}
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
-
-        run : |
-            python tweet.py --tweet_last_week 
-
-      - name: add stats to git 
-      
-        run : |
-            git pull
-            git config --global user.email "skshitizraj@gmail.com"
-            git config --global user.name "kshitijrajsharma"
-            mv *.csv stats/Nepal/Weekly/weekly_nepal_stats.csv
-            mv stats_metadata.json stats/Nepal/Weekly/stats_metadata.json
-
-            git add -f stats/Nepal/Weekly/weekly_nepal_stats.csv
-            git add -f stats/Nepal/Weekly/stats_metadata.json
-
-            git commit -m "Updated Weekly Nepal Stats"
-            git push
+        run: |
+          commit_id=$(git rev-parse --short HEAD)
+          python tweet.py --tweet_last_week --git $commit_id
