fixed bug of files

--- a/.github/workflows/daily_Nepal.yml
+++ b/.github/workflows/daily_Nepal.yml
@@ -2,9 +2,9 @@ name: Run Daily Report Nepal
 on:
   schedule:
     - cron: "0 6 * * *" # Run every day at 6 UTC
-  push:
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -42,8 +42,8 @@ jobs:
           git pull 
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
-          mv *.csv stats/Nepal/Daily/daily_nepal_stats.csv
-          mv stats_metadata.json stats/Nepal/Daily/stats_metadata.json
+          cp *.csv stats/Nepal/Daily/daily_nepal_stats.csv
+          cp stats_metadata.json stats/Nepal/Daily/stats_metadata.json
 
           git add -f stats/Nepal/Daily/daily_nepal_stats.csv
           git add -f stats/Nepal/Daily/stats_metadata.json
