--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -37,8 +37,8 @@ jobs:
           git pull
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
-          mv *.csv stats/Global/Daily/daily_global_stats.csv
-          mv stats_metadata.json stats/Global/Daily/stats_metadata.json
+          cp *.csv stats/Global/Daily/daily_global_stats.csv
+          cp stats_metadata.json stats/Global/Daily/stats_metadata.json
 
           git add -f stats/Global/Daily/daily_global_stats.csv
           git add -f stats/Global/Daily/stats_metadata.json
