--- a/.github/workflows/daily_hotosm.yml
+++ b/.github/workflows/daily_hotosm.yml
@@ -2,9 +2,9 @@ name: Run Daily Report Hotosm Hashtag
 on:
   schedule:
     - cron: "0 6 * * *" # Run every day at 7 UTC
-  # push:
-  #   branches:
-  #     - master
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -34,8 +34,8 @@ jobs:
           git pull
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
-          mv *.csv stats/Global/Daily/hotosm/daily_stats.csv
-          mv stats_metadata.json stats/Global/Daily/hotosm/stats_metadata.json
+          cp *.csv stats/Global/Daily/hotosm/daily_stats.csv
+          cp stats_metadata.json stats/Global/Daily/hotosm/stats_metadata.json
 
           git add -f stats/Global/Daily/hotosm/daily_stats.csv
           git add -f stats/Global/Daily/hotosm/stats_metadata.json
