--- a/.github/workflows/monthly_nepal.yml
+++ b/.github/workflows/monthly_nepal.yml
@@ -42,8 +42,8 @@ jobs:
           git pull
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
-          mv *.csv stats/Nepal/Monthly/Monthly_nepal_stats.csv
-          mv stats_metadata.json stats/Nepal/Monthly/stats_metadata.json
+          cp *.csv stats/Nepal/Monthly/Monthly_nepal_stats.csv
+          cp stats_metadata.json stats/Nepal/Monthly/stats_metadata.json
 
           git add -f stats/Nepal/Monthly/Monthly_nepal_stats.csv
           git add -f stats/Nepal/Monthly/stats_metadata.json
