--- a/.github/workflows/weekly_global.yml
+++ b/.github/workflows/weekly_global.yml
@@ -46,8 +46,8 @@ jobs:
           git pull
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
-          mv *.csv stats/Global/Weekly/weekly_global_stats.csv
-          mv stats_metadata.json stats/Global/Weekly/stats_metadata.json
+          cp *.csv stats/Global/Weekly/weekly_global_stats.csv
+          cp stats_metadata.json stats/Global/Weekly/stats_metadata.json
 
           git add -f stats/Global/Weekly/weekly_global_stats.csv
           git add -f stats/Global/Weekly/stats_metadata.json
