--- a/.github/workflows/weekly_Nepal.yml
+++ b/.github/workflows/weekly_Nepal.yml
@@ -2,9 +2,9 @@ name: Run Weekly Report Nepal
 on:
   schedule:
     - cron: "0 0 * * MON" # Run every Monday
-  push:
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
 jobs:
   issue:
     runs-on: ubuntu-latest
